# srrg_core

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  monocular_sfm.cpp  srrg_kitti_evaluate_odometry_app.cpp  srrg_message_converter_euroc_app.cpp  srrg_message_converter_kitti_app.cpp  srrg_message_groundtruther_tum_app.cpp  srrg_message_merger_app.cpp  srrg_message_sorter_app.cpp  srrg_txt_io_converter_euroc_app.cpp  srrg_txt_io_converter_kitti_app.cpp  triangulator_mono.cpp  triangulator_mono_least_squares.cpp  triangulator_stereo.cpp  visual_feature_tracker.cpp  visual_stereo_matcher.cpp  visual_tracker.cpp  visual_tracker_optical_flow.cpp
src/examples/: CMakeLists.txt  srrg_bresenham_example_app.cpp  srrg_kdtree_example.cpp  srrg_message_synchronizer_example.cpp  srrg_open_boss_file_example_app.cpp  srrg_open_file_example_app.cpp  srrg_remove_odometry_offset_example_app.cpp  srrg_trajectory_saver_example.cpp  srrg_trajectory_saver_example_app.cpp  srrg_txt_io_synchronizer_example.cpp
src/srrg_boss/: CMakeLists.txt  bidirectional_serializer.h  blob.cpp  blob.h  deserializer.cpp  deserializer.h  eigen_boss_plugin.h  id_context.cpp  id_context.h  json_recursive_object_parser.cpp  json_recursive_object_parser.h  serialization_context.cpp  serializer.cpp  serializer.h
src/srrg_distance_map/: CMakeLists.txt  base_path_search.h  distance_map.cpp  distance_map.h
src/srrg_image_utils/: CMakeLists.txt  depth_utils.cpp  depth_utils.h  point_image_utils.cpp  point_image_utils.h
src/srrg_kdtree/: kd_tree.hpp
src/srrg_messages/: CMakeLists.txt  base_image_message.cpp  base_image_message.h  base_message.cpp  base_message.h  base_sensor_message.cpp  base_sensor_message.h  joint_state_message.cpp  laser_message.h  message_factory.h  message_reader.cpp  message_writer.cpp  pinhole_image_message.h  pose_message.cpp  pose_message.h  sensor_message_sorter.cpp  spherical_image_message.cpp  spherical_image_message.h  static_transform_tree.h
src/srrg_path_map/: CMakeLists.txt  base_path_search.cpp  base_path_search.h  clusterer_path_search.cpp  clusterer_path_search.h  clusterer_test.cpp  dijkstra_path_search.cpp  dijkstra_path_search.h  dijkstra_test.cpp  distance_map_path_search.cpp  distance_map_path_search.h  distance_map_test.cpp  path_map.cpp  path_map.h  path_map_utils.cpp  path_map_utils.h
src/srrg_system_utils/: colors.h  system_utils.cpp  system_utils.h
src/srrg_txt_io/: CMakeLists.txt  base_image_message.cpp  base_image_message.h  base_message.h  base_sensor_message.cpp  base_sensor_message.h  joint_state_message.cpp  joint_state_message.h  laser_message.cpp  laser_message.h  message_dumper_trigger.cpp  message_dumper_trigger.h  message_reader.cpp  message_reader.h  message_timestamp_synchronizer.cpp  message_writer.h  pinhole_image_message.cpp  pinhole_image_message.h  pose_message.h  static_transform_message.cpp  static_transform_message.h
src/srrg_types/: CMakeLists.txt  base_camera_info.cpp  base_camera_info.h  camera_info_manager.cpp  camera_info_manager.h  cloud.cpp  cloud.h  cloud_3d.cpp  cloud_3d.h  image.h  image_data.cpp  image_data.h  multi_camera_info.cpp  multi_camera_info.h  pinhole_camera_info.cpp  pinhole_camera_info.h  spherical_camera_info.cpp  spherical_camera_info.h  traversability_map.cpp  traversability_map.h  types.hpp  types_cv.hpp  types_mat.hpp  vector_2d.h  vector_2d.hpp  vector_2d_test.cpp
